force-app/main/default/objects/Country_region_mapping__mdt/Country_region_mapping__mdt.object-meta.xml
<CustomObject>
    <label>Country region mapping</label>
    <pluralLabel>Country region mapping</pluralLabel>
</CustomObject>