force-app/main/default/objects/Country_region_mapping__mdt/fields/All_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>All_TimeZone__c</fullName>
    <label>All TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>