force-app/main/default/objects/Country_region_mapping__mdt/fields/country_code_2__c.field-meta.xml
<CustomField>
    <fullName>country_code_2__c</fullName>
    <label>country_code_2</label>
    <length>90</length>
    <type>Text</type>
</CustomField>