force-app/main/default/objects/Country_region_mapping__mdt/fields/country_code_3__c.field-meta.xml
<CustomField>
    <fullName>country_code_3__c</fullName>
    <label>country  code  3</label>
    <length>90</length>
    <type>Text</type>
</CustomField>