force-app/main/default/objects/Country_region_mapping__mdt/fields/primary_tz__c.field-meta.xml
<CustomField>
    <fullName>primary_tz__c</fullName>
    <label>primary_tz</label>
    <length>90</length>
    <type>Text</type>
</CustomField>