force-app/main/default/objects/Country_region_mapping__mdt/fields/region_id__c.field-meta.xml
<CustomField>
    <fullName>region_id__c</fullName>
    <label>region_id</label>
    <length>90</length>
    <type>Text</type>
</CustomField>